--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "/"
 author = "Pim Snel"
-copyright = "Copyright © 2021, Quiqr.org"
-paginate = 3.0
+copyright = "Copyright © 2023, Quiqr.org"
+paginate = 10.0
 languageCode = "en"
 DefaultContentLanguage = "en"
 enableInlineShortcodes = true
@@ -26,16 +26,16 @@ instagram = ""
 [menu]
 
   [[menu.main]]
-  identifier = "hugoconf"
-  name = "Hugo Conf 2022"
-  url = "/page/hugoconf/"
+  identifier = "post"
+  name = "Blog"
+  url = "/posts"
   weight = 10.0
 
   [[menu.main]]
   identifier = "download"
   name = "Download"
   url = "/page/download"
-  weight = 0.0
+  weight = 11.0
 
   [[menu.main]]
   identifier = "documentation"
