--- a/config.yaml
+++ b/config.yaml
@@ -83,8 +83,8 @@ params:
     map_marker_name: marker.png
     resources: []
   social:
-    - icon: fab fa-twitter
-      link: https://twitter.com/quiqrapp
+    - icon: fab fa-mastodon
+      link: https://mastodon.social/@quiqr
     - icon: fab fa-github
       link: https://github.com/quiqr
   resources: []
